@@ -104,6 +104,9 @@ password = CHANGEME
 ; require password - Allow connections without password. This option determines whether clients are allowed to connect without a password at all.
 require password = true
 
+; use HSTS header - This option controls if the HSTS header will be added to HTTP responses.
+use hsts header = true
+
 
 [/settings/ExporterExporter/server]
 ; ExporterExporterServer - Enable prometheus exporter_exporter server. (overrides the global option from the /modules section if uncommented)
